--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "^19.2.14",
-    "@angular/cdk": "^18.0.0",
-    "@angular/common": "^19.2.14",
-    "@angular/compiler": "^19.2.14",
-    "@angular/core": "^19.2.14",
-    "@angular/forms": "^19.2.14",
-    "@angular/platform-browser": "^19.2.14",
-    "@angular/platform-browser-dynamic": "^19.2.14",
-    "@angular/router": "^19.2.14",
+    "@angular/animations": "^20.0.6",
+    "@angular/cdk": "^20.0.0",
+    "@angular/common": "^20.0.6",
+    "@angular/compiler": "^20.0.6",
+    "@angular/core": "^20.0.6",
+    "@angular/forms": "^20.0.6",
+    "@angular/platform-browser": "^20.0.6",
+    "@angular/platform-browser-dynamic": "^20.0.6",
+    "@angular/router": "^20.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.15",
-    "@angular/cli": "~19.2.15",
-    "@angular/compiler-cli": "^19.2.14",
+    "@angular/build": "^20.0.5",
+    "@angular/cli": "~20.0.5",
+    "@angular/compiler-cli": "^20.0.6",
     "@tailwindcss/forms": "^0.5.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
@@ -37,7 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^19.2.2",
+    "ng-packagr": "^20.0.1",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.8.3"
   }
